--- a/inventary-service/docker-compose.yml
+++ b/inventary-service/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   postgres:
     image: postgres:15.3
-    container_name: postgres_db
+    container_name: postgres_inventary
     restart: always
     environment:
       POSTGRES_PASSWORD: senha123
