feat: connect inventary server and tests mockito

--- a/inventary-service/src/main/resources/application.properties
+++ b/inventary-service/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/inventary-service
 spring.datasource.username=postgres
 spring.datasource.password=senha123
 
+spring.flyway.enabled=false
+
 spring.jpa.hibernate.ddl-auto=none
 
 server.port=8082
